# arduino-snapclient

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  library.properties
desktop/: CMakeLists.txt  README.md  SnapClient.cpp
desktop-client/: CMakeLists.txt  README.md  SnapClient.cpp
docs/html/: SnapProcessor.h  _audio_tools_a_p_i_8h_source.html  _snap_client_8h_source.html  _snap_common_8h_source.html  _snap_config_8h_source.html  _snap_logger_8h_source.html  _snap_output_8h_source.html  _snap_output_simple_8h_source.html  _snap_output_tasks_8h_source.html  _snap_processor_8h_source.html  _snap_processor_buffered_8h_source.html  _snap_processor_r_p2040_8h_source.html  _snap_processor_r_t_o_s_8h_source.html  _snap_processor_tasks_8h_source.html  _snap_protocol_8h_source.html  _snap_time_8h_source.html  _snap_time_sync_8h_source.html  annotated.html  audio__api_8h_source.html  buffer_8h_source.html  c_j_s_o_n_8h_source.html  class_snap_client-members.html  class_snap_client.html  class_snap_output-members.html  class_snap_output.html  class_snap_output_simple-members.html  class_snap_output_simple.html  class_snap_output_tasks-members.html  class_snap_output_tasks.html  class_snap_processor-members.html  class_snap_processor.html  class_snap_processor_r_t_o_s-members.html  class_snap_processor_r_t_o_s.html  class_snap_processor_tasks-members.html  class_snap_processor_tasks.html  class_snap_time-members.html  class_snap_time.html  class_snap_time_sync-members.html  class_snap_time_sync.html  class_snap_time_sync_dynamic-members.html  (+154 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  (+2 more)
examples/AudioKit/: AudioKit.ino
examples/SnapClientAudioKit/: SnapClientAudioKit.ino
examples/SnapClientEthernet/: SnapClientEthernet.ino
examples/SnapClientFreeRTOS/: SnapClientFreeRTOS.ino
examples/SnapClientI2S/: SnapClientI2S.ino
examples/SnapClientInternalDAC/: SnapClientInternalDAC.ino
examples/SnapClientRP2040/: SnapClientRP2040.ino
examples/SnapClientSimple/: SnapClientSimple.ino
examples/SnapClientVS1053/: SnapClientVS1053.ino
examples/SnapRTOSClient/: SnapRTOSClient.ino
examples/Tests/TestGetHttp/: TestGetHttp.ino
examples/Tests/TestOutput/: TestOutput.ino
examples/Tests/TestTime/: TestTime.ino
examples/sandbox/SnapRTOSClient/: SnapRTOSClient.ino
src/: AudioToolsAPI.cpp  AudioToolsAPI.h  SnapClient.cpp  SnapClient.h  SnapConfig.h  config.h
src/api/: Common.cpp  Common.h  SnapAudioToolsAPI.cpp  SnapAudioToolsAPI.h  SnapCommon.h  SnapGetHttp.h  SnapLogger.h  SnapOutput.h  SnapOutputSimple.h  SnapOutputTasks.h  SnapProcessor.h  SnapProcessorBuffered.h  SnapProcessorRP2040.h  SnapProcessorRTOS.h  SnapProcessorTasks.h  SnapProtocol.h  SnapTime.h  SnapTimeSync.h  common.c  common.h
src/components/dsp_processor/: audio_api.h  dsp_processor.c  dsp_processor.cpp
src/components/dsp_processor/include/: dsp_processor.h
src/components/libbuffer/: buffer.c
src/components/lightsnapcast/: snapcast.c
src/components/net_functions/: CMakeLists.txt  net_functions.c
src/components/ota_server/: ota_server.c
src/components/protocol/: protocol.c
src/components/rtprx/: rtprx.c
src/components/rtprx/include/: rtprx.h
src/components/websocket/: websocket.c  websocket_server.c
src/components/websocket/include/: websocket.h  websocket_server.h
src/components/websocket_if/: websocket_if.c
src/components/websocket_if/include/: websocket_if.h
src/legacy/: dsp_processor.cpp  dsp_processor.h  http_gettask.cpp
src/lightsnapcast/: README.md  buffer.h  snapcast.c  snapcast.h
src/net_functions/: net_functions.c  net_functions.h
src/sandbox/: SnapOutputTasks.h  SnapProcessorTasks.h
src/websocket/: websocket_server.c
